airflow_in_docker_compose/logs/dag_id=xdag_id_1/run_id=manual__2024-06-07T08:20:33.645185+00:00/task_id=check_if_table_exists/attempt=1.log
[2024-06-07T08:20:41.451+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-06-07T08:20:41.477+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: xdag_id_1.check_if_table_exists manual__2024-06-07T08:20:33.645185+00:00 [queued]>
[2024-06-07T08:20:41.486+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: xdag_id_1.check_if_table_exists manual__2024-06-07T08:20:33.645185+00:00 [queued]>
[2024-06-07T08:20:41.486+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 1
[2024-06-07T08:20:41.502+0000] {taskinstance.py:2330} INFO - Executing <Task(_BranchPythonDecoratedOperator): check_if_table_exists> on 2024-06-07 08:20:33.645185+00:00
[2024-06-07T08:20:41.510+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61: DeprecationWarning: This process (pid=11667) is multi-threaded, use of fork() may lead to deadlocks in the child.
  pid = os.fork()

[2024-06-07T08:20:41.512+0000] {standard_task_runner.py:63} INFO - Started process 11669 to run task
[2024-06-07T08:20:41.512+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'xdag_id_1', 'check_if_table_exists', 'manual__2024-06-07T08:20:33.645185+00:00', '--job-id', '531', '--raw', '--subdir', 'DAGS_FOLDER/jobs_dag.py', '--cfg-path', '/tmp/tmpsykvjp4r']
[2024-06-07T08:20:41.515+0000] {standard_task_runner.py:91} INFO - Job 531: Subtask check_if_table_exists
[2024-06-07T08:20:41.569+0000] {task_command.py:426} INFO - Running <TaskInstance: xdag_id_1.check_if_table_exists manual__2024-06-07T08:20:33.645185+00:00 [running]> on host db8c7b709f57
[2024-06-07T08:20:41.679+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='xdag_id_1' AIRFLOW_CTX_TASK_ID='check_if_table_exists' AIRFLOW_CTX_EXECUTION_DATE='2024-06-07T08:20:33.645185+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-06-07T08:20:33.645185+00:00'
[2024-06-07T08:20:41.681+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-06-07T08:20:41.691+0000] {base.py:84} INFO - Using connection ID 'postgres_default' for task execution.
[2024-06-07T08:20:41.696+0000] {sql.py:470} INFO - Running statement: SELECT * FROM information_schema.tables WHERE table_schema = '[('public', '***'), ('public', 'another_table'), ('schema1', '***'), ('schema2', 'some_table')]'AND table_name = 'table_name_1';, parameters: None
[2024-06-07T08:20:41.697+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-06-07T08:20:41.698+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/decorators/base.py", line 265, in execute
    return_value = super().execute(context)
                   ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 269, in execute
    return self.do_branch(context, super().execute(context))
                                   ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/jobs_dag.py", line 41, in check_table_exist
    query = hook.get_first(sql=sql_to_check_table_exist.format(schema, table_name))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 292, in get_first
    return self.run(sql=sql, parameters=parameters, handler=fetch_one_handler)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 418, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 475, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "public"
LINE 1: ...nformation_schema.tables WHERE table_schema = '[('public', '...
                                                             ^

[2024-06-07T08:20:41.710+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=xdag_id_1, task_id=check_if_table_exists, run_id=manual__2024-06-07T08:20:33.645185+00:00, execution_date=20240607T082033, start_date=20240607T082041, end_date=20240607T082041
[2024-06-07T08:20:41.726+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 531 for task check_if_table_exists (syntax error at or near "public"
LINE 1: ...nformation_schema.tables WHERE table_schema = '[('public', '...
                                                             ^
; 11669)
[2024-06-07T08:20:41.735+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-06-07T08:20:41.747+0000] {warnings.py:110} WARNING - /home/***/.local/lib/python3.12/site-packages/***/models/baseoperator.py:1296: AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
  result = cls.__new__(cls)

[2024-06-07T08:20:41.775+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-06-07T08:20:41.780+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
